fix paragraph spacing

--- a/frontend/app/element/markdown.scss
+++ b/frontend/app/element/markdown.scss
@@ -33,6 +33,11 @@
             margin-bottom: 0.571em;
         }
 
+        .paragraph {
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
+
         strong {
             color: var(--main-text-color);
         }
